test_regress/t/t_inst_misarray_bad.out
%Error: t/t_inst_misarray_bad.v:16: VARREF 't.foo' is not an unpacked array, but is in an unpacked array context
                     .foo(foo));   
                          ^~~
%Error: Exiting due to
